@@ -141,6 +141,7 @@ SVN trunk (1.1.x):
    * renamed "Across The River" config file to improve display order
    * renamed "Across The River" map to "Across the River"
    * made "Load Game ..." first map option (was last), for better visibility
+   * added map size to MP lobby (patch #484 by Noyga)
  * campaign server
    * support new "timestamp" attribute
    * save persistent attributes in the campaign data
